--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,16 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-http = "0.2.8"
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1.0.145", features = ["derive"] }
-serde_json = "1.0.85"
-tokio = { version = "1", features = ["full"] }
-url = "2.3.1"
+http = "1.1.0"
+reqwest = { version = "0.11.26", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] }
+url = "2.5.0"
+open = "5.1"
+regex = "1.10.3"
+log = "0.4.21"
+fern = "0.6.2"
+indicatif = "0.17.8"
+lazy_static = "1.4.0"
+humantime = "2.1.0"
