--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ fern = "0.6.2"
 indicatif = "0.17.8"
 lazy_static = "1.4.0"
 humantime = "2.1.0"
+clap = {version = "4.5.2", features = ["derive"]}
