--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "sniper"
+path = "src/lib.rs"
+
+[[bin]]
+name = "sniper"
+path = "src/main.rs"
+
 [dependencies]
 dotenv = "0.15.0"
 http = "1.1.0"
