--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "sniper"
 path = "src/main.rs"
+required-features = ["clap", "tokio"]
 
 [dependencies]
 dotenv = "0.15.0"
@@ -19,7 +20,6 @@ http = "1.1.0"
 reqwest = { version = "0.12.2", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-tokio = { version = "1.36.0", features = ["full"] }
 url = "2.5.0"
 open = "5.1"
 regex = "1.10.3"
@@ -28,4 +28,13 @@ fern = "0.6.2"
 indicatif = "0.17.8"
 lazy_static = "1.4.0"
 humantime = "2.1.0"
-clap = {version = "4.5.2", features = ["derive"]}
+
+[dependencies.clap]
+version = "4.5.4"
+features = ["derive"]
+optional = true
+
+[dependencies.tokio]
+version = "1.36.0"
+features = ["macros"]
+optional = true
