--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dotenv = "0.15.0"
 http = "1.1.0"
 reqwest = { version = "0.12.2", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
+tokio = { version = "1.36.0", features = ["macros"] }
 serde_json = "1.0.114"
 url = "2.5.0"
 open = "5.1"
@@ -32,9 +33,4 @@ humantime = "2.1.0"
 [dependencies.clap]
 version = "4.5.4"
 features = ["derive"]
-optional = true
-
-[dependencies.tokio]
-version = "1.36.0"
-features = ["macros"]
 optional = true
