--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "sniper"
 path = "src/main.rs"
-required-features = ["clap"]
+required-features = ["clap", "indicatif", "env_logger", "tokio"]
 
 [dependencies]
 dotenv = "0.15.0"
@@ -25,8 +25,6 @@ url = "2.5.0"
 open = "5.1"
 regex = "1.10.3"
 log = "0.4.21"
-fern = "0.6.2"
-indicatif = "0.17.8"
 lazy_static = "1.4.0"
 humantime = "2.1.0"
 
@@ -34,5 +32,14 @@ humantime = "2.1.0"
 version = "4.5.4"
 features = ["derive"]
 optional = true
+
+[dependencies.indicatif]
+version = "0.17.8"
+optional = true
+
 [dependencies.env_logger]
 version = "0.11.3"
+optional = true
+
+[features]
+tokio = ["tokio/rt-multi-thread"]
