--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,13 @@ path = "src/lib.rs"
 [[bin]]
 name = "sniper"
 path = "src/main.rs"
-required-features = ["clap", "indicatif", "env_logger", "tokio"]
 
 [dependencies]
 dotenv = "0.15.0"
 http = "1.1.0"
 reqwest = { version = "0.12.2", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
-tokio = { version = "1.36.0", features = ["macros"] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 serde_json = "1.0.114"
 url = "2.5.0"
 open = "5.1"
@@ -31,15 +30,10 @@ humantime = "2.1.0"
 [dependencies.clap]
 version = "4.5.4"
 features = ["derive"]
-optional = true
 
 [dependencies.indicatif]
 version = "0.17.8"
-optional = true
 
 [dependencies.env_logger]
 version = "0.11.3"
-optional = true
 
-[features]
-tokio = ["tokio/rt-multi-thread"]
